--- a/src/routes/IndexPage.less
+++ b/src/routes/IndexPage.less
@@ -107,12 +107,17 @@
         }
       }
       .mainWrap {
+        height: 100%;
         padding-top: 30px;
         .loginCode {
           width: 80%;
           height: 60%;
           margin: 0 auto 30px;
           border: 1px solid #ccc;
+          .loginIframe {
+            width: 100%;
+            height: 100%;
+          }
         }
         .title {
           text-align: center;
